namespace java com.twitter.auth.thrift.passporttype
namespace py gen.twitter.auth.PassportType
namespace rb PassportType
namespace go passporttype
#@namespace scala com.twitter.auth.passporttype.thriftscala
#@namespace strato com.twitter.auth.passporttype

enum PassportType {
  USER_REQUEST = 0,
  EMPLOYEE_DEVELOPER = 1,
  ACCOUNT_DELEGATION = 2
}
